replaced bad contrast link colors and fixed updated skills p widths

--- a/src/App.css
+++ b/src/App.css
@@ -568,6 +568,11 @@ p {
   background-color: var(--color-pri);
 }
 
+.bg-sec {
+  background-color: #2a50ca;
+  background-color: var(--color-sec);
+}
+
 .bg-dark {
   background-color: rgb(0, 15, 44);
   background-color: var(--color-dark);
@@ -648,6 +653,11 @@ p {
 .border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
+
+.border-blue-700 {
+  --tw-border-opacity: 1;
+  border-color: rgba(29, 78, 216, var(--tw-border-opacity));
 }
 
 .border-pri {
@@ -1401,10 +1411,6 @@ p {
   width: 50%;
 }
 
-.w-3\/4 {
-  width: 75%;
-}
-
 .w-4\/5 {
   width: 80%;
 }
@@ -1688,6 +1694,10 @@ p {
 
   .md\:left-24 {
     left: 6rem;
+  }
+
+  .md\:w-3\/4 {
+    width: 75%;
   }
 
   .md\:w-4\/6 {
