--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -566,6 +566,10 @@ p {
   background-color: var(--color-pri);
 }
 
+.bg-sec {
+  background-color: var(--color-sec);
+}
+
 .bg-dark {
   background-color: var(--color-dark);
 }
@@ -641,6 +645,11 @@ p {
 .border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
+
+.border-blue-700 {
+  --tw-border-opacity: 1;
+  border-color: rgba(29, 78, 216, var(--tw-border-opacity));
 }
 
 .border-pri {
@@ -1370,10 +1379,6 @@ p {
   width: 50%;
 }
 
-.w-3\/4 {
-  width: 75%;
-}
-
 .w-4\/5 {
   width: 80%;
 }
@@ -1651,6 +1656,10 @@ p {
 
   .md\:left-24 {
     left: 6rem;
+  }
+
+  .md\:w-3\/4 {
+    width: 75%;
   }
 
   .md\:w-4\/6 {
